syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package ds_tenant;

message DsTenant {

     int32  id=1 ;
     optional string tenant_code=2 ;
     optional string description=3 ;
     optional int32 queue_id=4 ;
     optional string create_time=5 ;
     optional string update_time=6 ;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsTenantService {
  rpc ListDsTenants(ListDsTenantsRequest) returns (ListDsTenantsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsTenants"
    };
  }

  rpc AllDsTenants(google.protobuf.Empty) returns ( AllDsTenantsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/AllDsTenants"
    };
  }
  rpc GetDsTenant(GetDsTenantRequest) returns (DsTenant) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsTenants/*}"
    };
  }

  rpc CreateDsTenant(CreateDsTenantRequest) returns (DsTenant) {
    option (google.api.http) = {
      post: "/v1alpha1/DsTenants"
      body: "DsTenant"
    };
  }

  rpc UpdateDsTenant(UpdateDsTenantRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsTenant.name=DsTenants/*}"
      body: "DsTenant"
    };
  }

  rpc DeleteDsTenant(DeleteDsTenantRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsTenants/*}"
    };
  }
  rpc VerifyDsTenant(VerifyDsTenantRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1alpha1/DsTenants:verify"
    };
  }
}

// message DsTenant {
// ! This should be defined elsewhere
// }

message ListDsTenantsRequest {



  // The maximum number of items to return.
  int64 page_size = 1;

  int64 page_num = 2;
  optional string search_val=3 ;
}

message AllDsTenantsResponse {
  repeated DsTenant total_list = 1;


}
message ListDsTenantsResponse {
  repeated DsTenant total_list = 1;
  int64 current_page = 2;
  int64 page_size = 3;
  int64 start = 4;
  int64 total = 5;
  int64 total_page = 6;


}

message GetDsTenantRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}


message VerifyDsTenantRequest {
  string tenant_code=1 ;
}

message CreateDsTenantRequest {
  string tenant_code=1 ;
  optional int32 queue_id=2 ;
  optional string description=3 ;
}

message UpdateDsTenantRequest {
  int32 id=1 ;
  int32 queue_id=2 ;
  string description=3 ;

}

message DeleteDsTenantRequest {
 int32 id=1 ;
}
